# KCD-JP

./: .gitmodules  README.md  pyproject.toml
KCD1/dicts/: dict2.csv  location.csv  uiname.csv
KCD1/dicts-id/: codex_name.csv  dialogue.csv  item_names.csv
KCD1/dicts-rev/: dict-post.csv
KCD2/: aho.md
KCD2/dicts/: dict2.csv
KCD2/dicts-id/: codex.csv  dialog.csv  quest.csv  terms.csv  text.csv
tools/: reader.py  topo.py
tools/module/: params.py
